--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+Release 0.2-0:
+  * comm.chunk improved and moved to pbdMPI
 Release 0.1-1:
   * Added more chunking options and documentation
 Release 0.1-0:
